Биркэт. Начинаем делать трехпалубное судно.

--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -57,6 +57,13 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">15 November 2017</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="experiment">Начата разработка над уменьшенной версией торча.</li>
+				<li class="rscdel">Возвращено старое количество игроков, что требуется для запуска некоторых режимов.</li>
+			</ul>
+
 			<h2 class="date">14 November 2017</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
