--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -57,6 +57,13 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">18 November 2017</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Лодаут биркэта обновлен.</li>
+				<li class="rscdel">Убран эксплоит купли-продажи карпов.</li>
+			</ul>
+
 			<h2 class="date">15 November 2017</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
@@ -69,6 +76,7 @@
 			<ul class="changes bgimages16">
 				<li class="bugfix">Исправлены вентиляции двигателей и неподключенный к кнопке сенсор на мостике.</li>
 				<li class="rscadd">(админам) Набор офицера колониального бюро изменен и возвращен.</li>
+				<li class="rscdel">Возвращен старый MOTD. Букву Я исправим позже.</li>
 				<li class="tweak">Трек Nightcall в музыкальном автомате стал громче.</li>
 			</ul>
 
