--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -57,6 +57,18 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">28 November 2017</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">В отдел снабжения добавлен голопад.</li>
+				<li class="rscadd">В роботехнику добавлен набор для управления ботом-сапёром. На шанс обезвреживания бомбы не влияет.</li>
+				<li class="bugfix">Починены неработающие шторы на складе в носу правого борта четвертой палубы.</li>
+				<li class="bugfix">Исправлено расположение компьютеров в приемной медбея. На скорость смерти пациентов не влияет.</li>
+				<li class="bugfix">Аномалия исчезла - гравитация и свет экспедиционного склада возвращены.</li>
+				<li class="tweak">По личному заказу анонимного инвестора Факела, был переделан вакантный офис.</li>
+				<li class="rscdel">'Герои кон-федерации' стерли с мостика корабля герб ПСС.</li>
+			</ul>
+
 			<h2 class="date">18 November 2017</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
