Чейнджлог - второе пришествие.

--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -67,6 +67,7 @@
 				<li class="bugfix">Аномалия исчезла - гравитация и свет экспедиционного склада возвращены.</li>
 				<li class="tweak">По личному заказу анонимного инвестора Факела, был переделан вакантный офис.</li>
 				<li class="rscdel">'Герои кон-федерации' стерли с мостика корабля герб ПСС.</li>
+				<li class="rscdel">Инженеры ЦКЭК убрали из лобби сервер командования.</li>
 			</ul>
 
 			<h2 class="date">18 November 2017</h2>
