--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -68,6 +68,7 @@
 				<li class="tweak">По личному заказу анонимного инвестора Факела, был переделан вакантный офис.</li>
 				<li class="rscdel">'Герои кон-федерации' стерли с мостика корабля герб ПСС.</li>
 				<li class="rscdel">Инженеры ЦКЭК убрали из лобби сервер командования.</li>
+				<li class="tweak">Сила резоми уменьшена относительно других рас. Влияет на скорость бега из-за переносимого в рюкзаке десанта из таких же резоми.</li>
 			</ul>
 
 			<h2 class="date">18 November 2017</h2>
