--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -57,6 +57,14 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">02 December 2017</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="experiment">Усилены противоаббардажные меры - с внешней стороны шлюзов для выхода на обшивку были убраны кнопки доступа. Требуется сообщник или пояс с инструментами..</li>
+				<li class="rscadd">В автолат добавлена камера и пленка для камеры.</li>
+				<li class="bugfix">Исправлен баг с неработающей вентиляцией в EVE.</li>
+			</ul>
+
 			<h2 class="date">28 November 2017</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
