--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -57,6 +57,16 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">07 December 2017</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправлена кодировка в правилах. Матрица времени и пространства восстановлена.</li>
+				<li class="rscadd">Добавил разброс гильз на одном тайле. Последствия боя стали интереснее на 4%</li>
+				<li class="rscadd">Добавлена экипировка морпехов на задании. Ивентная.</li>
+				<li class="rscadd">Добавлен 1 новый звук для женского смешка, звук хлопанья и салютирования.</li>
+				<li class="tweak">Панель эмоутов возвращена с новыми и старыми эмоутами.</li>
+			</ul>
+
 			<h2 class="date">02 December 2017</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
