--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -61,6 +61,8 @@
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
 				<li class="rscadd">С ТГ портированы 3 вида плавников унатхам. В меню выбора бород портирована возможность поставить 'острый' нос.</li>
+				<li class="tweak">Направления всех объявлений для заметок изменено на правильное.</li>
+				<li class="tweak">В кабинеты глав добавлены кнопки для открытия входного шлюза.</li>
 			</ul>
 
 			<h2 class="date">08 December 2017</h2>
