--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -57,6 +57,17 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">14 December 2017</h2>
+			<h3 class="author">Обновление от Bear1ake:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправлена буква Я в MOTD, базе данных и флаворе персонажа.</li>
+			</ul>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscdel">Возвращён старый вариант MOTD по причине отсутствия надобности в Референсе. Спасибо Архимагу за помощь.</li>
+				<li class="bugfix">Аномалия ликвидирована, MOTD снова на воспринимаемом языке.</li>
+			</ul>
+
 			<h2 class="date">10 December 2017</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
