--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -57,6 +57,12 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">15 December 2017</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Добавлен передоз для трикороздина - 45 кубиков. Играйтесь осторожно.</li>
+			</ul>
+
 			<h2 class="date">14 December 2017</h2>
 			<h3 class="author">Обновление от Bear1ake:</h3>
 			<ul class="changes bgimages16">
