Больше Света Богу Света.

--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -61,6 +61,7 @@
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
 				<li class="bugfix">База данных библотеки поднята.</li>
+				<li class="experiment">Яркость света повышена - требуется более тонкая настройка.</li>
 			</ul>
 
 			<h2 class="date">15 December 2017</h2>
