Забыл свой чейнджлог. И запаздавший от Линерса.

--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -57,6 +57,25 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">26 December 2017</h2>
+			<h3 class="author">Обновление от Liners:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавлены персональные аптечки для охраны, исследователей и инженеров. Военную (охранную) можно спрятать на пояс СБ.</li>
+				<li class="rscadd">Перенесён бульдог-дробовик с ТГ. Лает цилиндрическим магазином на 6 патронов.</li>
+				<li class="rscadd">Добавлен револьвер-дробовик. Поинт бланк из кармана вечен.</li>
+				<li class="rscadd">Добавлены пистолет и револьвер .22LR, а также (и) два вида боеприпасов к нему.</li>
+				<li class="tweak">Добавлен 7 слот в охранный пояс. Можно носить на одну перцовку больше!</li>
+				<li class="wip">Основная механика консерв, 5 штук. В каждой разное содержимое и разный запас энергии. Только для сотрудников у батареи.</li>
+				<li class="wip">Начато добавление новых видов вооружения в игру. Надеемся, что это не будет рескин старых пушек с новым путём.</li>
+			</ul>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Пассажиры и экипаж вне службы может взять в лодауте виолончель.</li>
+				<li class="tweak">Если выбрать на кукле персонажа кисть, то вы возьмете человека за руку.</li>
+				<li class="rscadd">В офис представителей, РД и командующего офицера добавлен документ с текстом внутри. Спрятать под плитку после прочтения.</li>
+				<li class="wip">Цели антагонистов изменены - были убраны задания на кражу подштаников (кроме РД) и секретных документов. Добавлены цели на кражу ещё одного комплекта брони, подштаников представителей и супер-дорогого мачете утипути находчика.</li>
+			</ul>
+
 			<h2 class="date">24 December 2017</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
