Добавляем наших людей, чейнджлог.

--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -27,7 +27,7 @@
 			
 			<p><div align='center'><font size='3'><a href="http://wiki.baystation12.net/">Оригинальная Вики Baystation 12</a> | <a href="https://github.com/Baystation12/Baystation12/">Оригинальный код Baystation 12</a> | <a href="https://wiki.infinity-ss13.ru/">Наша Вики Baystation 12</a> | <a href="https://github.com/infinitystation/Baystation12/">Наш репозиторий</a></font></div></p>
             <font size='2'>Код лицезирован под <a href="http://www.gnu.org/licenses/agpl.html">AGPLv3</a>. Контент лицензирован под <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>.<br><br>
-			<font size='2'><b>Посетите наш дискорд-канал:</b> (На данный момент ссылка отсутствует)</font>
+			<font size='2'><b>Посетите наш дискорд-канал:</b> https://discord.gg/mn456xK </font>
 			</td>
 	</tr>
 </table>
@@ -38,12 +38,12 @@
 		<td valign='top'>
             <font size='2'><b>Текущие мейнтейнеры проекта:</b> <a href='https://github.com/infinitystation/Baystation12?tab=members'>-Буп-</a><br></font>
 			<font size='2'><b>Список активных участников репозитория:</b> <a href='https://github.com/infinitystation/Baystation12/graphs/contributors'>-Буп-</a><br></font>
-			<font size='2'><b>Кодеры:</b> Bear1ake, Sladkoeshka, Quardbreak<br></font>
-			<font size='2'><b>Спрайтеры:</b> Temblrex<br></font>
+			<font size='2'><b>Кодеры:</b> Bear1ake, Sladkoeshka, Liners<br></font>
+			<font size='2'><b>Спрайтеры:</b> Temblrex, Kettenhund <br></font>
 			<font size='2'><b>Мапперы:</b> Terror4000rus<br></font>
 			<font size='2'><b>Звуки:</b> Любой из предложивших<br></font>
             <font size='2'><b>Тестеры:</b> Любой, кто доложил о недочёте в нашем или оригинальном трекере Baystation 12<br></font><br>
-			<font size='2'><b>Большое спасибо:</b> Baystation 12, Eris-Station (CEV-Eris), Solaris Station 13, /tg/ station, Paradise Station, AuroraStation, Polaris Station, /vg/station, GoonStation devs, оригинальные разработчики Space Station 13 и Invisty за картинку в лобби (для англоязычного сообщества Baystation 12).<br> Также спасибо всем, кто внёс свой вклад но не попал сюда. Если хотите попасть сюда, обратитесь в дискорд или на форум.</font>
+			<font size='2'><b>Большое спасибо:</b> Baystation 12, Eris-Station (CEV-Eris), Solaris Station 13, /tg/ station, Paradise Station, AuroraStation, Polaris Station, /vg/station, GoonStation devs, оригинальные разработчики Space Station 13 и Invisty за картинку в лобби (для англоязычного сообщества Baystation 12).<br> Также спасибо всем, кто внёс свой вклад, но не попал сюда. Если хотите попасть сюда, обратитесь в дискорд или на форум.</font>
 			<font size='2' color='red'><b><br>Нашли баг?</b> Посетите наш багтрекер <a href="https://github.com/infinitystation/Baystation12/issues?labels=Bug&state=open">~Тюк~</a>.<br></font>
 		</td>
 	</tr>
@@ -57,6 +57,12 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">28 December 2017</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Звёздная карта вокруг корабля изменена. Пункты назначения для шаттлов выставлены согласно их расположению в пространстве.</li>
+			</ul>
+
 			<h2 class="date">26 December 2017</h2>
 			<h3 class="author">Обновление от Liners:</h3>
 			<ul class="changes bgimages16">
