--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -57,6 +57,12 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">31 December 2017</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Время полета экспедиционного шаттла снижено с 5 минут до 1.5 минут.</li>
+			</ul>
+
 			<h2 class="date">28 December 2017</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
