Виоланчель за 3 и пианино.

--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -57,6 +57,12 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">01 January 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">Малоизвестный музыкант спрятал своё пианино где-то на судне.</li>
+			</ul>
+
 			<h2 class="date">31 December 2017</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
