--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -62,6 +62,11 @@
 			<ul class="changes bgimages16">
 				<li class="rscdel">Временно (а может и нет) выключена возможность загружать ПИИ и позитроников в РИГи.</li>
 			</ul>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Доступ к стыковочным портам обновлён. Должно работать корректно.</li>
+				<li class="rscdel">Новый год закончился - возвращаемся в суровые будни 2Д космонавтиков.</li>
+			</ul>
 
 			<h2 class="date">01 January 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
