OOC заметки влючены.

--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -66,6 +66,7 @@
 			<ul class="changes bgimages16">
 				<li class="bugfix">Доступ к стыковочным портам обновлён. Должно работать корректно.</li>
 				<li class="rscdel">Новый год закончился - возвращаемся в суровые будни 2Д космонавтиков.</li>
+				<li class="rscadd">ООС заметки о персонаже включены. Вы можете выставить их в меню выбора персонажа (ниже имени). Буква я работает полу-корректно - пишите её как обычно, но не редактируйте после. Иначе она пропадёт (patch-soon).</li>
 			</ul>
 
 			<h2 class="date">01 January 2018</h2>
