Чейнджлог забыл отправить.

--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -57,6 +57,12 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">09 January 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Пофикшен баг с закручиваем панелей на протезированных конечностях.</li>
+			</ul>
+
 			<h2 class="date">08 January 2018</h2>
 			<h3 class="author">Обновление от Sladkoeshka:</h3>
 			<ul class="changes bgimages16">
