--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -57,6 +57,12 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">10 January 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">Офис пилота НТ перенесён в РНД. Офицеры мостика с квалификацией пилота (можно взять в лодауте) могут спокойно пользоваться шаттлами.</li>
+			</ul>
+
 			<h2 class="date">09 January 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
