Самый забытый чейнджлог.

--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -61,6 +61,9 @@
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
 				<li class="maptweak">Офис пилота НТ перенесён в РНД. Офицеры мостика с квалификацией пилота (можно взять в лодауте) могут спокойно пользоваться шаттлами.</li>
+				<li class="tweak">Добавлены новые спрайты для зиппо. Можно выбрать в лодауте.</li>
+				<li class="experiment">Порог повреждения от низкой температуры снижен с -18~ до -38~.</li>
+				<li class="imageadd">Щепотка более графонистых спрайтов с ТГ.</li>
 			</ul>
 
 			<h2 class="date">09 January 2018</h2>
