Патч после мерджа.

--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -57,6 +57,15 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">14 January 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="balance">Внешний вид маскировки ниндзи изменён. Персонаж больше не пропадает из мира и контуры фигуры елезаметны. Хорошо различим на свету при движении.</li>
+				<li class="tweak">Задание на побег с корабля (которое подразумевает активацию эвакуации) изменено. Все поды должны функционировать нормально. Если улететь на шаттле синдиката или ниндзи на базу - у вас будет гринтекст за задание.</li>
+				<li class="tweak">Шанс выпадания заданий на эвакуацию и выживание изменён во славу логики. Шанс, что Вам выпадет эвакуация заместо выживания - 1 к 10.</li>
+				<li class="tweak">Ниндзя и маг снова требуют 1 игрока для запуска режима. Развлекайтесь в 5 утра.</li>
+			</ul>
+
 			<h2 class="date">10 January 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
