Минорные обновы. Всё в чейнджлоге.

--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -57,6 +57,15 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">17 January 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Добавлен второй (2) слот для роботиста.</li>
+				<li class="tweak">Роботехникам добавлены рабочие перчатки и пустые пояса для инструментов.</li>
+				<li class="tweak">Убраны помпы с анастезией до фикса оных. Заменены стандартными баллонами и масками.</li>
+				<li class="tweak">Шторки справа и снизу камбуза получили отдельные кнопки.</li>
+			</ul>
+
 			<h2 class="date">16 January 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
