--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -57,6 +57,16 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">21 January 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Беззубый экспедиционный корвет обратился детенышом акулы. Пусковая шахта приобрела торпедный аппарат с соответствующим оборудованием. Для снятия болтов нужен доступ одного из: COS, CE, XO.</li>
+				<li class="rscadd">По левому борту перед мостиком появился космический лазер. Используется для снятия щитов и шугания мелких корабликов. Образец передовой, но на военные корветы такие ставят только для снятия щитов.</li>
+				<li class="rscadd">Торпедный аппарат требует минимум одного (1) человека для заряжания (потому-что бюджет). Бесполезен против щитов. Наносит колосальный урон обшивке. Не пытайтесь запускать себя и других людей.</li>
+				<li class="rscadd">На мостике и в пусковой шахте находятся консоли по контролю вооружения. Контролируют, соответственно, лазер и торпедный аппарат. Требуется доступ глав.</li>
+				<li class="spellcheck">Как работают снаряды: луч (или снаряд) вылетает за границу карты и переходит на овермап (где летает торч и находятся иные космические объекты). На овермапе перед кораблем появляется запущенный снаряд и летит в том направлении, куда повернуто судно. На данный момент, объектов для обстрела не так уж и много (биркэт и сам торч).</li>
+			</ul>
+
 			<h2 class="date">17 January 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
