--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -57,6 +57,14 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">22 January 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавлен показатель температуры для персонажа. Имеется 'родная' температура для каждой расы. Если температура воздуха вокруг персонажа ниже базовой - иконка синеватая. Выше - красная. Имеется 4 степени у температуры.</li>
+				<li class="tweak">Правила обновлены и приведены в читабельный вид. В целом, мало что изменилось.</li>
+				<li class="tweak">Эмоджи доступны для игроков. Со списком Вы можете ознакомиться, если посмотрите закрепленные сообщения в дискорде сервера.</li>
+			</ul>
+
 			<h2 class="date">21 January 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
