--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -57,6 +57,13 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">26 January 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавленна экспедиционная форма Резоми. Рабочая, рабочая-офицерская, тренировочная, 'сервисная' и роботехническая. Брать в лодауте ксеносов.</li>
+				<li class="rscadd">Добавлены скафандры Резоми для пилотов и экспедиционников. Спрайты одежды и скафандров by TwinIndifferent.</li>
+			</ul>
+
 			<h2 class="date">22 January 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
