--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -57,11 +57,20 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">01 February 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Хайджек больше не должен выпадать ролям. Во всяком случае, наш генератор рандома так думает.</li>
+				<li class="rscadd">У наемников появилось +2 задачи - похищение важных членов персонала. Сложность повышена на 120%</li>
+				<li class="tweak">В лодаут добавлен плащ для резоми.</li>
+				<li class="tweak">В лодаут добавлена одежда для воксов.</li>
+			</ul>
+
 			<h2 class="date">26 January 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
-				<li class="rscadd">Добавленна экспедиционная форма Резоми. Рабочая, рабочая-офицерская, тренировочная, 'сервисная' и роботехническая. Брать в лодауте ксеносов.</li>
-				<li class="rscadd">Добавлены скафандры Резоми для пилотов и экспедиционников. Спрайты одежды и скафандров by TwinIndifferent.</li>
+				<li class="rscadd">Добавленна экспедиционная форма резоми. Рабочая, рабочая-офицерская, тренировочная, 'сервисная' и роботехническая. Брать в лодауте ксеносов.</li>
+				<li class="rscadd">Добавлены скафандры Резоми для пилотов и экспедиционников. Спрайты одежды и скафандров by TwinIndifferent</li>
 			</ul>
 
 			<h2 class="date">22 January 2018</h2>
