--- a/config/rules.html
+++ b/config/rules.html
@@ -22,121 +22,69 @@
 <h3>Правила сервера</h3>
 <br>
 <strong>Внимание!</strong> В данном разделе даны лишь названия правил. Для полного ознакомления пройдите по ссылке: <a href="https://infinity-ss13.ru/index.php?/topic/768-правила-игры-на-сервере/" target="_blank">соответствующий раздел на форуме.</a><br><br>
-<strong><span style="color: #ff0000;">Сервер </span></strong><br>
+<strong><h2><span style="color: #ff0000;">Сервер </span></h2></strong><br>
 
 <strong><span style="color: #ff0000;">Самое основное </span></strong><br>
-
 <table border=1>
-<tr><td width=300><b>Название </b></tr>
-
 <tr height=30><td> Не мудачить.</td>
-
 <tr height=30><td> Не гриферить.</td>
-
 <tr height=30><td> Не пауергеймить.</td>
-
 <tr height=30><td> Не метагеймить.</td>
-
 <tr height=30><td> Не ко-опиться (кроме обучения без злого умысла).</td>
-
 <tr height=30><td> Не мультиачить.</td>>
-
 <tr height=30><td> Не багоюзить.</td>
-
 <tr height=30><td> Выражайтесь на русском языке.</td>
 </table>
-
+<br>
 <strong><span style="color: #ff0000;">Общение вне персонажа </span></strong><br>
 
 <table border=1>
-<tr><td width=300><b>Название </b></tr>
-
+<tr height=30><td> Не засоряйте OOC флудом или спамом. </tr>
 <tr height=30><td> Разделяйте IC и OOC.</td>
-
-<tr height=30><td> Не засоряйте OOC флудом или спамом. </td>
-
-<tr height=30><td> Использовать мата в любой его форме, браниться, оскорблять других вне игрового раунда запрещено.</td>
-
-<tr height=30><td> Не метагеймить.</td>
-
-<tr height=30><td> Не ко-опиться (кроме обучения без злого умысла).</td>
-
-<tr height=30><td> Не мультиачить.</td>>
-
-<tr height=30><td> Не багоюзить.</td>
-
-<tr height=30><td> Выражайтесь на русском языке.</td>
+<tr height=30><td> Использовать мата в любой его форме, браниться, оскорблять других вне IC запрещено.</td>
 </table>
 <br>
 <strong><span style="color: #ff0000;">Администрация и Сотрудники </span></strong><br>
 
 <table border=1>
-<tr><td width=300><b>Название </b></tr>
-
 <tr height=30><td> Администрация может вмешиваться в игру при необходимости.</td>
-
-<tr height=30><td> Если Вы обнаружили нарушение - сообщите.</td>
-
 <tr height=30><td> Adminhelp используется исключительно для внутреигровых причин.</td>
-
 <tr height=30><td> При общение с администрацией четко формулируйте свои сообщения и придерживайтесь хорошего тона.</td>
-
-<tr height=30><td> Употребление слова "Педаль", "Вахтер" в отношение администрации и сотрудников сервера запрещено.</td>
-
-<tr height=30><td> Игровые решения администраторов являются окончательными и обсуждению в АХ не подлежат.</td>
+<tr height=30><td> Употребление слов "Педаль", "Вахтер" в отношение администрации и сотрудников сервера запрещено.</td>
+<tr height=30><td> Решения администраторов являются окончательными и обсуждению в АХ не подлежат.</td>
 </table>
 <br>
-<strong><span style="color: #ff0000;">Ролевая игра </span></strong><br>
+<strong><h2><span style="color: #ff0000;">Ролевая игра </span></h2></strong><br>
 
 <strong><span style="color: #ff0000;">Создание персонажа </span></strong><br>
 
 <table border=1>
-<tr><td width=300><b>Название </b></tr>
-
-<tr height=30><td> Создавайте реалистичных персонажей.</td>
-
+<tr height=30><td> Создавайте реалистичных персонажей.</tr>
 <tr height=30><td> Персонаж должен обладать именем, что соответствует лору расы персонажа.</td>
-
 <tr height=30><td> Имя персонажа пишется на английском.</td>
-
 <tr height=30><td> Флавор может содержать только внешнее описание персонажа (В т.ч. в виде картинок).</td>
 </table>
 <br>
-<strong><span style="color: #ff0000;">Отыгрывание персонажа </span></strong><br>
+<strong><span style="color: #ff0000;">Отыгрыш персонажа </span></strong><br>
 
 <table border=1>
-<tr><td width=300><b>Название </b></tr>
-
-<tr height=30><td> Знания не переносятся из раунда в раунд. Но переносятся отношения между персонажами.</td>
-
+<tr height=30><td> Не ломайте игровую атмосферу. </tr>
+<tr height=30><td> Знания не переносятся из раунда в раунд, но переносятся отношения между персонажами.</td>
 <tr height=30><td> ЕРП разрешено, но действия сексуального характера без согласия - запрещены.</td>
-
 <tr height=30><td> Не оставлять на себе важные вещи после ухода из игры.</td>
-
-<tr height=30><td> Не ломайте игровую атмосферу.</td>
-
 <tr height=30><td> Использовать в IC сленг из OOC ("Трейтор", "Рева", "Синди", "Визард", "Генка", "Робаст, "Щиткьюрити", "Емаг", "Клаван" и т.п.) запрещено.</td>
-
 <tr height=30><td> Исполняйте свою роль как член персонала. Будьте компетентны в своей профессии.</td>
-
 <tr height=30><td> Игровые правила работают в конце раунда. Не выходите из роли до рестарта.</td>
-
 <tr height=30><td> Избегайте боли.</td>
-
 <tr height=30><td> Соблюдайте игровой лор.</td>
-
-<tr height=30><td> За синтетиков соблюдайте преимущественно свои законы, а не правила сервера.</td>
-
 <tr height=30><td> Будьте грамотны во время разговора персонажа.</td>
+<tr height=30><td> За синтетиков соблюдайте преимущественно свои законы, а не правила сервера.</td>
 </table>
 <br>
 <strong><span style="color: #ff0000;">Минимальный возраст </span></strong><br>
 
 <table border=1>
-<tr><td width=300><b>Название </b></tr>
-
 <tr height=30><td> РД, представитель НТ и представитель ПСС должны обладать минимальным возрастом в 30 лет.</td>
-
 <tr height=30><td> Военные и Экспедиционный Корпус обладают собственной системой рангов. Возраст персонажа должен быть не ниже указанной планки.</td>
 
 </table>
@@ -149,23 +97,32 @@
 <strong><span style="color: #ff0000;">Конфликты между персонажами </span></strong><br>
 
 <table border=1>
-<tr><td width=300><b>Наличие роли антагониста не позволяет нарушать правила сервера </b></tr>
+<tr height=30><td> Конфликты между персонажами должны иметь четкое обоснование. </tr>
+<tr height=30><td> Повышайте "градус" конфликтности равномерно. Не переходите от кулака к кобуре.</td>
+<tr height=30><td> Избегайте убийств в процессе самообороны. Лучшая самооборона - наличие медали по лёгкой атлетике.</td>
+<tr height=30><td> Имейте четкое различие между вашим отношением и отношением персонажа.</td>
+<tr height=30><td> Если вы отыгрываете женского персонажа - старайтесь не лезть в драку. Не будьте баттлтрапом.</td>
+</table>
+<br>
+<strong><span style="color: #ff0000;">Антагонисты </span></strong><br>
+
+<table border=1>
+<tr height=30><td> Наличие роли антагониста не позволяет нарушать правила сервера.</tr>
 <tr height=30><td> Наличие роли антагониста - не наличие лицензии на убийство.</td>
 <tr height=30><td> Некоторые антагонисты имеют ограничения в плане отыгрыша. Нюкеры не могут стать членами персонала, например.</td>
 <tr height=30><td> Основной источники обеспечения корабля энергией и обеспечения атмосферой имеют неприкосновенность в плане саботажа.</td>
 <tr height=30><td> Выполнение целей в зоне эвакуации (спасательные капсулы) запрещено.</td>
 </table>
-
+<br>
 <table border=1>
-<tr><td width=300><b>Основная задача любого антагониста - разнообразить раунд. </b></tr>
+<tr height=30><td> Основная задача любого антагониста - разнообразить раунд.</tr>
 <tr height=30><td> Не играйте в гринтекст. Основная задача - сделать интересный раунд для как можно большего числа игроков.</td>
 <tr height=30><td> Вы можете попросить администратора изменить ваши задачи.</td>
 <tr height=30><td> Отыгрывание нестандартных антагонистов допускается с разрешения администратора</td>
 <tr height=30><td> Отзывать шаттл за антагониста без разрешения администрации запрещено.</td>
 </table>
-
+<br>
 <table border=1>
-<tr><td width=300><b>Персоналу об Антагонистах </b></tr>
 <tr height=30><td>Знания о вещах Черного Рынка строго ограничены. Вы можете знать о его существовании, но если вы не роль с доступом к нему - не об ассортименте.</td>
 <tr height=30><td>Не геройствуйте. Вы хотите выжить, в первую очередь.</td>
 </table>
