--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -61,6 +61,8 @@
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
 				<li class="rscadd">Резоми, скреллов и унатхов невозможно различить по полу без чтения Флавора или не будучи представителем той же расы по причине схожих мужских и женских черт.</li>
+				<li class="balance">Склад медбея стал на 50% менее рандомным. Пачка аптечек и некоторые медикаменты будут там всегда.</li>
+				<li class="experiment">Убраны ограничения на одежду в лодауте. Помните, что у экипажа имеется дресс код.</li>
 			</ul>
 
 			<h2 class="date">01 February 2018</h2>
