--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -57,6 +57,13 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">04 February 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">На шаттл торговцев добавлен детектор оружия. Будьте осторожны перед ограблением (или штурмом).</li>
+				<li class="tweak">Немного уменьшен интервал между нотами на музыкальных инструментах. Сообщите, если что-то не так.</li>
+			</ul>
+
 			<h2 class="date">03 February 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
