--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -57,6 +57,16 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">05 February 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">База контрабандистов обновлена. Исправлены баги.</li>
+				<li class="spellcheck">Конвеер на базе торговцев пофикшен. Сканер оружия активирован с начала раунда.</li>
+				<li class="spellcheck">Куртки из лодаута должны отображаться корректно. Производитель ассимилирован.</li>
+				<li class="spellcheck">Форон из технических помещений и карго больше не ломает игру.</li>
+				<li class="spellcheck">Из полотенца были извлечены титановые пластины - урон снижен до нуля.</li>
+			</ul>
+
 			<h2 class="date">04 February 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
