Мокрый и скользкий Уитли.

--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -57,6 +57,15 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">09 February 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Мусоросброс работает корретно. Отправленный покорять космос РД не жаловался.</li>
+				<li class="bugfix">Смысловой фикс сообщения о вызове помощи. Команда ЕРТ больше не может быть запрошена SEV Torch. За то, у вас появилась мобилизируемая команда ОБР.</li>
+				<li class="bugfix">Персонал НТ больше не ворует messenger сумки у вирусологов. Производство налажено.</li>
+				<li class="tweak">Входная дверь в офис следователей потеряла окна. Шанс успешной кражи снижен на 5%.</li>
+			</ul>
+
 			<h2 class="date">05 February 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
