Ну и чейнджлог, раз на то пошло.

--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -65,6 +65,12 @@
 				<li class="bugfix">Персонал НТ больше не ворует messenger сумки у вирусологов. Производство налажено.</li>
 				<li class="tweak">Входная дверь в офис следователей потеряла окна. Шанс успешной кражи снижен на 5%.</li>
 			</ul>
+			<h3 class="author">Обновление от Unknown:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Набберы больше не показывают свой пол кому попало.</li>
+				<li class="tweak">Соковыжималка получила обновление OC - теперь можно перемалывать матерриалы прямиком из карго.</li>
+				<li class="tweak">Таяры больше не покрываются гусиной кожей в -0 по цельсию, но в -35...</li>
+			</ul>
 
 			<h2 class="date">05 February 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
