Я буду материться, если бэй будет рефакторить эти файлы. Фикс РИГов.

--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -57,6 +57,18 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">13 February 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Пофикшен баг, из-за которого воксы не могли съедать Резоми. Бойтесь разорванных органов из-за паникующего динозавра. Приятного аппетита.</li>
+				<li class="bugfix">Фикс вида большинства РИГов на спине унатхов.</li>
+				<li class="bugfix">РИГ НТ могут носить люди, скреллы, таяран, унатхи и резоми. Спрайты для каждой расы свои.</li>
+				<li class="bugfix">РИГ врачей могут носить люди, скреллы, таяран и унатхи. Полностью новый спрайт только у унатхов. Остальные с небольшими различиями.</li>
+				<li class="bugfix">РИГ шахтеров могут носить люди, скреллы, таяран и унатхи. Скреллы под вопросом. У таяран отдельный спрайт шлема. У унатхов полностью другой спрайт.</li>
+				<li class="bugfix">РИГ инженеров могут носить люди, скреллы, таяран и унатхи. Отдельный спрайт лишь у унатхов.</li>
+				<li class="bugfix">РИГ РД могут носить люди, скреллы, таяран и унатхи. Отедельный спрайт только у унатхов.</li>
+			</ul>
+
 			<h2 class="date">09 February 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
