--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -67,6 +67,7 @@
 				<li class="bugfix">РИГ шахтеров могут носить люди, скреллы, таяран и унатхи. Скреллы под вопросом. У таяран отдельный спрайт шлема. У унатхов полностью другой спрайт.</li>
 				<li class="bugfix">РИГ инженеров могут носить люди, скреллы, таяран и унатхи. Отдельный спрайт лишь у унатхов.</li>
 				<li class="bugfix">РИГ РД могут носить люди, скреллы, таяран и унатхи. Отедельный спрайт только у унатхов.</li>
+				<li class="bugfix">На сдачу зафикшен спрайт сварочных масок для таяр, унатхов и резоми. Необычные маски только у унатхов.</li>
 			</ul>
 
 			<h2 class="date">09 February 2018</h2>
