--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -57,6 +57,12 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">14 February 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">На голодек добавлен плац ПСС.</li>
+			</ul>
+
 			<h2 class="date">13 February 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
