--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -57,6 +57,23 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">15 February 2018</h2>
+			<h3 class="author">Обновление от Liners:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Механика гарантированного непробития брони. Если проджектайл имеет значение бронепробития на 30 меньше, чем значение брони, то автоматически происходит блокировка урона.</li>
+				<li class="wip">Бронебойные и экспансивные боерпипасы для всего огнестрельного оружия.</li>
+			</ul>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Пластина из бронежилета наемников приобрела собственный спрайт приблизительно за 20 тысяч таллеров. 18 из них на бренд.</li>
+				<li class="tweak">Расцветку зиппо снова можно выбрать в лодауте.</li>
+				<li class="tweak">Выбор больших и малых подсумков должен работать корректно. Добавлена расцветка</li>
+				<li class="rscadd">Таярам добавлена офицерская униформа ЭК и пофкшена пропавшая форма резоми. Больше не нужно с серьезным лицом ходить в одних трусах и аргументировать наличием униформы в экзейме.</li>
+				<li class="rscadd">В лодаут добавлена баночка таблеток с местным глицином (Methylphenidate). Не имеет механического воздействия на персонажа помимо сообщения в чат 'Вам легче сконцентрироваться' и подобных. Закидывайтесь за углом.</li>
+				<li class="spellcheck">Название аптечек первой помощи потерпело незначительные и совместимые с жизнью изменения. first aid > first-aid kit.</li>
+				<li class="balance">Изменено содержимое шкафчиков первой помощи для шаттлов и отделов. Вы можете расчитывать на базовую аптечку первой помощи в каждом убежище, шаттле и отделе, но снижен шанс спавна лучших вещей.</li>
+			</ul>
+
 			<h2 class="date">14 February 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
