Фикс уголков шаттлов.

--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -72,6 +72,7 @@
 				<li class="rscadd">В лодаут добавлена баночка таблеток с местным глицином (Methylphenidate). Не имеет механического воздействия на персонажа помимо сообщения в чат 'Вам легче сконцентрироваться' и подобных. Закидывайтесь за углом.</li>
 				<li class="spellcheck">Название аптечек первой помощи потерпело незначительные и совместимые с жизнью изменения. first aid > first-aid kit.</li>
 				<li class="balance">Изменено содержимое шкафчиков первой помощи для шаттлов и отделов. Вы можете расчитывать на базовую аптечку первой помощи в каждом убежище, шаттле и отделе, но снижен шанс спавна лучших вещей.</li>
+				<li class="bugfix">Зафикшены спрайты уголков спасательных капсул, шаттлов и жировых складок персонажей.</li>
 			</ul>
 
 			<h2 class="date">14 February 2018</h2>
