--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -38,7 +38,7 @@
 		<td valign='top'>
             <font size='2'><b>Текущие мейнтейнеры проекта:</b> <a href='https://github.com/infinitystation/Baystation12?tab=members'>-Буп-</a><br></font>
 			<font size='2'><b>Список активных участников репозитория:</b> <a href='https://github.com/infinitystation/Baystation12/graphs/contributors'>-Буп-</a><br></font>
-			<font size='2'><b>Кодеры:</b> Bear1ake, Sladkoeshka, Liners<br></font>
+			<font size='2'><b>Кодеры:</b> Bear1ake, Sladkoeshka, Liners, KareTa<br></font>
 			<font size='2'><b>Спрайтеры:</b> Temblrex, Kettenhund, TwinInDifferent <br></font>
 			<font size='2'><b>Мапперы:</b> Terror4000rus<br></font>
 			<font size='2'><b>Звуки:</b> Любой из предложивших<br></font>
@@ -56,6 +56,14 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">18 February 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="experiment">Патрульный корабль ЕРТ практически завершен. Набирается экипаж и делаются последние приготовления.</li>
+				<li class="imageadd">Изменено отображение температуры для интерфейса midnignt. Вы можете выбрать другой интерфейс и настроить его на настройки midnight, если совсем плохо. Просьба отсылать действительно стоящие предложения и замечания уровня выше, чем 'традиция'.</li>
+				<li class="tweak">В шкафчики первой помощи добавлены шины.</li>
+			</ul>
+
 			<h2 class="date">17 February 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
