Обновляем спрайты и фиксим аляры.

--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -62,6 +62,7 @@
 				<li class="experiment">Патрульный корабль ЕРТ практически завершен. Набирается экипаж и делаются последние приготовления.</li>
 				<li class="imageadd">Изменено отображение температуры для интерфейса midnignt. Вы можете выбрать другой интерфейс и настроить его на настройки midnight, если совсем плохо. Просьба отсылать действительно стоящие предложения и замечания уровня выше, чем 'традиция'.</li>
 				<li class="tweak">В шкафчики первой помощи добавлены шины.</li>
+				<li class="imageadd">Добавлены спрайты вентиляции с TGstation.</li>
 			</ul>
 
 			<h2 class="date">17 February 2018</h2>
